# rcell-convert

./: .env_template  .gitignore  README.md  pyproject.toml  requirements.txt
src/nwb/: README.md  __init__.py
src/nwb/scripts/: fill_icportal_stimulus.py  plot_stimulus.py
src/nwb/src/: db.py  dict.py  io.py  plot.py  rcell.py  stimulus.py  unit.py  utils.py  validation.py
src/nwb/src/styles/: classic.mplstyle  monospace.mplstyle
src/qpc/: README.md  __main__.py
src/qpc/conversion/: config.py  csvread.py  experiment.py  google_sheet.py  rcell.py  xmlread.py
src/qpc/scripts/: data_view.py  rcell_create.py  rcell_view.py
